--- a/homeworks/nikolay.krasniuk_Kingstar22/5-rxjs/style.css
+++ b/homeworks/nikolay.krasniuk_Kingstar22/5-rxjs/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .main {
-  max-width: 50%;
+  max-width: 60%;
   margin: 0 auto;
   box-shadow: 0 5px 10px rgba(35, 36, 40, .5);
   background: #F3F7FE;
@@ -95,7 +95,7 @@ body {
   top: 0;
 }
 
-@media (max-width: 890px) {
+@media (max-width: 768px) {
 
   body.lock {
     overflow: hidden;
@@ -144,7 +144,7 @@ body {
     bottom: 7px;
   }
 
-  span {
+  .main__header-burger-line {
     position: absolute;
     background-color: #FFF;
     left: 15px;
