5-rxjs/Logic improvements

--- a/homeworks/serhii.kulakivskyi_svkul/5-rxjs/src/css/index.css
+++ b/homeworks/serhii.kulakivskyi_svkul/5-rxjs/src/css/index.css
@@ -118,8 +118,8 @@ body {
 }
 
 .header__nav-item {
+  padding: .4rem 0;
   color: var(--nav-link-color);
-  line-height: 2;
   text-decoration: none;
 }
 
