--- a/homeworks/Andrii.Morozov_AndriiMorozov88/5-rxjs/style_rxjs.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/5-rxjs/style_rxjs.css
@@ -1,15 +1,23 @@
-.header__content {
+body {
+  padding: 0;
+}
+
+.header {
   display: flex;
+  top: 0;
   background-color: #5F9EA0;
   border: 1px #0F404D solid;
-  margin-top: -10px;
   justify-content: space-around;
   align-items: center;
   position: fixed;
   width: 100%;
 }
 
-.header__content-logo {
+.header-hidden {
+  display: none;
+}
+
+.header-logo {
   display: flex;
   align-items: center;
   margin-left: 60px;
@@ -24,14 +32,14 @@
   text-align: center;
 }
 
-.header__content-menu-ul {
+.header__menu {
   display: flex;
   justify-content: flex-end;
   font-size: 20px;
   padding-right: 50px;
 }
 
-.header__content-menu-li {
+.header__menu-item {
   display: flex;
   margin-right: 50px;
 }
@@ -40,6 +48,8 @@
   width: 100%;
   background-color: #30966B;
   text-align: justify;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .header__burger {
@@ -56,7 +66,7 @@
   margin-bottom: 3px;
 }
 
-a {
+.header__menu-item-link {
   text-decoration: none;
 }
 
@@ -69,6 +79,13 @@ a {
     cursor: pointer;
   }
 
+  .main__container-text {
+    width: 100%;
+    background-color: #30966B;
+    text-align: justify;
+    margin-top: 60px;
+  }
+
   .header__burger-line {
     width: 80%;
     height: 2px;
@@ -76,7 +93,7 @@ a {
     margin-bottom: 3px;
   }
 
-  .header__content {
+  .header {
     position: fixed;
     top: 0;
     left: 0;
@@ -84,12 +101,12 @@ a {
     height: 20%;
   }
 
-  .header__content-menu-ul-active {
+  .header__menu__active {
     display: block;
     font-size: 20px;
   }
 
-  .header__content-menu-ul-hidden {
+  .header__menu__hidden {
     display: none;
   }
 }
