--- a/homeworks/Ernest.Myrmyr_ErnestMk1/5-rxjs/styles.css
+++ b/homeworks/Ernest.Myrmyr_ErnestMk1/5-rxjs/styles.css
@@ -35,6 +35,10 @@ li {
   transform: translateY(calc(-1 * var(--header-height)));
 }
 
+.nav_show {
+  transform: translateY(0);
+}
+
 .navigation_phone {
   display: none;
 }
@@ -98,6 +102,7 @@ li {
   background-color: #000;
   width: 10vh;
   text-align: center;
+  height: var(--header-height);
 }
 
 @media (max-width: 900px) {
