--- a/homeworks/nikita.karchinskiy_Nikkarchinskiy/5-rxjs/style.css
+++ b/homeworks/nikita.karchinskiy_Nikkarchinskiy/5-rxjs/style.css
@@ -1,105 +1,165 @@
 body {
-  margin: 0;
-  padding: 0;
+  height: 100%;
+  line-height: 1;
+  font-size: 16px;
+  background-color: #240000;
+  color: #FFF;
+}
+
+.body-lock {
+  overflow: hidden;
 }
 
 .header {
+  font-family: "Shadows Into Light", cursive;
   position: fixed;
   top: 0;
   left: 0;
+  width: 100%;
+  z-index: 10;
+  background-color: #363636;
+  transition: all .6s ease;
+}
+
+.header-container {
+  max-width: 1200px;
+  margin: 0 auto;
   display: flex;
+  padding: 0 30px;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
-  height: max-content;
-  background-color: #000;
-  height: 50px;
-}
-
-.header-wrapper-l {
-  display: flex;
-  align-items: center;
-  height: 100%;
-}
-
-.heder-logo-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 4rem;
-  background-color: #DB2222;
+  min-height: 70px;
 }
 
 .header-logo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #000;
-  background-color: #DB2222;
-  border-radius: 3px;
   text-decoration: none;
-  height: 100%;
-  width: 5rem;
-}
-
-.header-nav {
-  height: 100%;
-}
-
-.menu-nav {
-  display: flex;
-  justify-content: space-around;
-  width: 20rem;
-  height: 100%;
-  display: flex;
-  padding: 0;
-  margin: 0;
-}
-
-.li-header {
-  display: flex;
-  justify-content: center;
-  list-style-type: none;
-  color: #FFF;
-  height: 100%;
-  width: 100%;
-  width: 5.7rem;
-  background-color: #000;
-  border-radius: 3px;
+  color: #FF9100;
+  position: relative;
+  z-index: 5;
   transition: .3s;
 }
 
-.li-header:hover {
-  background-color: #FF2A2A;
-  color: #000;
+.header-logo:hover {
+  color: #FFF;
 }
 
-/* .li-header:hover > .li-header-items {
-  color: #000;
-} */
+.header_hidden {
+  transform: translateY(-100%);
+  transition: all .6s ease;
+}
 
-.li-header-items {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.page-text {
+  padding: 75px 65px;
+}
+
+.page-section {
+  word-spacing: 6px;
+}
+
+.menu-list {
+  position: relative;
+}
+
+.menu-list-item {
+  list-style: none;
+  max-width: 80%;
+}
+
+.menu-link {
   color: #FFF;
+  font-size: 18px;
   text-decoration: none;
-  height: 100%;
-  width: 100%;
   transition: .3s;
 }
 
-.btn-buy-now {
-  margin-right: 2rem;
-  cursor: pointer;
-  background-color: transparent;
-  border: 2px solid #FF2A2A;
-  border-radius: 10px;
-  color: #FFF;
-  transition: .5s;
+.menu-link:hover {
+  color: #FF9100;
 }
 
-.btn-buy-now:hover {
-  border: 2px solid transparent;
-  color: #FF2A2A;
+@media (min-width: 750px) {
+
+  .menu-list {
+    display: flex;
+    align-items: center;
+  }
+
+  .menu-list-item {
+    padding: 10px 15px;
+  }
+}
+
+@media (max-width: 750px) {
+
+  .menu-icon {
+    z-index: 5;
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 10px;
+    cursor: pointer;
+  }
+
+  .menu-icon-line,
+  .menu-icon::before,
+  .menu-icon::after {
+    left: 0;
+    position: absolute;
+    height: 10%;
+    width: 100%;
+    transition: all, .3s ease 0s;
+    background-color: #FFF;
+  }
+
+  .menu-icon-line {
+    top: 50%;
+    transform: scale(1) translate(0, -50%);
+  }
+
+  .menu__icon_active {
+    transform: scale(0) translate(0, -50%);
+  }
+
+  .menu__icon_active::before {
+    top: 50%;
+    transform: rotate(-45deg) translate(0, -50%);
+  }
+
+  .menu__icon_active::after {
+    bottom: 50%;
+    transform: rotate(45deg) translate(0, 50%);
+  }
+
+  .menu-body {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    padding: 100px 30px 30px;
+    transition: left .3s ease 0s;
+    overflow: auto;
+  }
+
+  .menu__body_active {
+    left: 0;
+  }
+
+  .menu-list-item {
+    margin: 0 0 30px;
+  }
+
+  .menu-link {
+    font-size: 24px;
+  }
+
+  .menu-body::before {
+    content: "";
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    height: 70px;
+    z-index: 2;
+  }
 }
