--- a/homeworks/Andrii.Morozov_AndriiMorozov88/5-rxjs/style_rxjs.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/5-rxjs/style_rxjs.css
@@ -5,9 +5,9 @@ body {
 .header {
   display: flex;
   top: 0;
-  background-color: #5F9EA0;
+  background-color: #00090A;
   border: 1px #0F404D solid;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   position: fixed;
   width: 100%;
@@ -22,13 +22,13 @@ body {
   align-items: center;
   margin-left: 60px;
   font-size: 30px;
+  color: #630606;
 }
 
 .main__container {
   padding-top: 55px;
   margin-left: auto;
   margin-right: auto;
-  background-color: #CCCAC7;
   text-align: center;
 }
 
@@ -46,7 +46,7 @@ body {
 
 .main__container-text {
   width: 100%;
-  background-color: #30966B;
+  background-color: #F36451;
   text-align: justify;
   padding-left: 5px;
   padding-right: 5px;
@@ -68,6 +68,7 @@ body {
 
 .header__menu-item-link {
   text-decoration: none;
+  color: #630606;
 }
 
 @media (max-width: 767px) {
@@ -77,12 +78,7 @@ body {
     width: 30px;
     height: 30px;
     cursor: pointer;
-  }
-
-  .main__container-text {
-    width: 100%;
-    background-color: #30966B;
-    text-align: justify;
+    margin-right: 20px;
   }
 
   .header__burger-line {
@@ -94,18 +90,38 @@ body {
 
   .header {
     position: fixed;
+    display: flex;
+    justify-content: space-between;
     top: 0;
     left: 0;
     width: 100%;
     height: 10%;
   }
 
-  .header__menu__active {
-    display: block;
-    font-size: 20px;
+  .header__toggle {
+    display: flex;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 30%;
   }
 
-  .header__menu__hidden {
+  .header__menu {
+    display: none;
+  }
+
+  .header__menu__active {
+    display: block;
+    font-size: 30px;
+  }
+
+  .header-logo {
+    display: flex;
+    margin-left: 70px;
+    font-size: 35px;
+  }
+
+  .header__logo__hidden {
     display: none;
   }
 }
