--- a/homeworks/kostya.bublyk_ConstBagel/5-rxjs/styles/style.css
+++ b/homeworks/kostya.bublyk_ConstBagel/5-rxjs/styles/style.css
@@ -8,14 +8,14 @@
   width: 90%;
   min-height: 50%;
   margin: 0 auto;
-  border: 1px solid #24292F;
 }
 
 .page__header {
   width: 100%;
   height: auto;
+  position: sticky;
+  top: 0;
   display: flex;
-  flex-direction: row;
   align-items: center;
   background-color: #24292F;
 }
@@ -23,8 +23,8 @@
 .header__main {
   display: flex;
   width: fit-content;
-  flex-direction: row;
-  justify-content: start;
+  height: 100%;
+  align-items: center;
 }
 
 .header__title {
@@ -33,13 +33,22 @@
   height: 100%;
   background-color: #44A047;
   text-align: center;
+}
+
+.header__link {
+  text-decoration: none;
   color: #FFF;
+}
+
+.header__link:hover {
+  text-decoration: underline;
+  cursor: pointer
 }
 
 .header__burger {
   display: none;
-  width: 50px;
-  height: 100%;
+  width: 30px;
+  height: 30px;
 }
 
 .header__navigation {
