--- a/homeworks/nikita.karchinskiy_Nikkarchinskiy/5-rxjs/style.css
+++ b/homeworks/nikita.karchinskiy_Nikkarchinskiy/5-rxjs/style.css
@@ -6,6 +6,18 @@ body {
   color: #FFF;
 }
 
+body::-webkit-scrollbar {
+  width: 10px;
+  height: 8px;
+  background-color: #303030;
+  border-radius: 5px;
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #000;
+}
+
 .body-lock {
   overflow: hidden;
 }
