--- a/homeworks/maksym.selenkov_MaksymSelenkov/6-typescript/src/style.css
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/6-typescript/src/style.css
@@ -4,7 +4,7 @@ body {
   align-items: center;
 }
 
-.bubble, .key {
+.bubble {
   margin: 80px;
 }
 
@@ -24,4 +24,15 @@ body {
 .key__symbol {
   text-align: center;
   font-size: 70px;
+}
+
+.progress {
+  width: 100%;
+  background-color: #435566;
+}
+
+.bar {
+  width: 1%;
+  height: 10px;
+  background-color: #00F;
 }
