--- a/homeworks/serhii.kulakivskyi_svkul/6-typescript/src/css/index.css
+++ b/homeworks/serhii.kulakivskyi_svkul/6-typescript/src/css/index.css
@@ -6,7 +6,8 @@
   /* consts */
   --color-transparent: transparent;
   --color-black: #000;
-  --color-white: #FFF7F7;
+  --color-white: #FFF;
+  --color-white-10: #FFF7F7;
   --color-blue-10: #E4EFFE;
   --color-red-10: #FF726C;
   --color-red-15: #B53F3F;
@@ -23,33 +24,64 @@
   --color-black-rgb-0_06: rgb(0 0 0 / .06%);
 
   /* font */
-  --font-color-1: var(--color-black);
+  --font-color-1: var(--color-grey-90);
 
   /* body */
-  --body-background-color: var(--color-white);
+  --body-background-color: var(--color-white-10);
+
+  /* logo */
+  --logo-color: var(--color-green-15);
 
   /* button--main */
   --button-main-background-color: var(--color-green-15);
   --button-main-disabled-background-color: var(--color-grey-25);
-  --button-main-color: var(--color-white);
+  --button-main-color: var(--color-white-10);
+
+  /* progress-bar */
+  --progress-bar-background-color: var(--color-green-15);
+  --progress-bar-line-background-color: var(--color-white-10);
+
+  /* game */
+  --game-background-color: var(--color-white);
+  --game-box-shadow-color: var(--color-grey-25);
+
+  /* scores */
+  --scores-background-color: var(--color-white);
+  --scores-box-shadow-color: var(--color-grey-25);
 }
 
 body {
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   background-color: var(--body-background-color);
   color: var(--font-color-1);
   font-family: "Roboto", "Rubik", sans-serif;
   font-weight: 400;
 }
 
+.header {
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 3px solid;
+}
+
+.header__title {
+  margin: 0;
+}
+
+.header__title::first-letter {
+  color: var(--logo-color);
+}
+
 .game__wrapper {
+  padding-top: 1rem;
   width: 100%;
   display: flex;
   flex-direction: column;
+  background-color: var(--game-background-color);
+  border-bottom-right-radius: 45px;
+  border-bottom-left-radius: 45px;
+  box-shadow: 0 2px 6px var(--game-box-shadow-color);
 }
 
 .info-wrapper {
@@ -86,6 +118,8 @@ body {
 }
 
 .balloon__item {
+  width: 100px;
+  height: 100px;
   background: radial-gradient(#E66465, #9198E5);
   border-radius: 50%;
   transition: width .3s, height .3s;
@@ -97,7 +131,7 @@ body {
 }
 
 .score {
-  margin-bottom: 0;
+  margin: 0;
   font-size: 3rem;
   text-align: center;
 }
@@ -125,4 +159,51 @@ body {
   color: var(--button-main-color);
   background-color: var(--button-main-disabled-background-color);
   cursor: not-allowed;
+}
+
+.footer {
+  padding: 0 1rem 1rem;
+}
+
+.progress-bar {
+  height: 20px;
+  width: 100%;
+  margin-bottom: 1rem;
+  display: none;
+  box-shadow: 0 0 8px #CCC;
+  transform: rotate(180deg);
+  background-color: var(--progress-bar-background-color);
+}
+
+.progress-bar.progress-bar--active {
+  display: block;
+}
+
+.progress-bar__line {
+  width: 100%;
+  height: 20px;
+  background-color: var(--progress-bar-line-background-color);
+}
+
+.scores__wrapper {
+  width: 100%;
+  padding: 1rem;
+}
+
+.scores__list {
+  max-height: 343px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow-y: auto;
+}
+
+.scores__item {
+  margin-bottom: .5rem;
+  padding: 1rem;
+  background-color: var(--scores-background-color);
+}
+
+.scores__item:last-child {
+  margin-bottom: 0;
 }
