--- a/homeworks/kostya.bublyk_ConstBagel/6-typescript/styles/style.css
+++ b/homeworks/kostya.bublyk_ConstBagel/6-typescript/styles/style.css
@@ -55,20 +55,34 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,.5);
+  background-color: rgba(0, 0, 0, 0);
   z-index: 1;
-  font-size: 4em;
   text-align: center;
 }
 
-.popup__message--win {
+.popup__message {
   margin-top: 10%;
-  color: #B8D0B1;
+  font-size: 4em;
   opacity: 1;
 }
 
+.popup__message--win {
+  color: #47F712;
+}
+
 .popup__message--lose {
-  margin-top: 10%;
-  color: #FF2600;
+  color: #FC2F0A;
+}
+
+.popup__score {
+  font-size: 3em;
   opacity: 1;
+}
+
+.popup__score--win {
+  color: #47F712;
+}
+
+.popup__score--lose {
+  color: #FC2F0A;
 }
