redundant text is deleted and information items are corrected

--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/6-typescript/src/style.css
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/6-typescript/src/style.css
@@ -61,6 +61,12 @@ body {
   align-items: center;
 }
 
+.game-popup {
+  position: absolute;
+  top: 370px;
+  font-size: 50px;
+}
+
 .game-loader {
   position: absolute;
   top: 707px;
