--- a/homeworks/Aleksandr.Turuta_turuta7/6-typescript/src/style.css
+++ b/homeworks/Aleksandr.Turuta_turuta7/6-typescript/src/style.css
@@ -104,3 +104,27 @@ html {
 .button__stop-game:hover {
   background: #FF4848;
 }
+
+.background-AAA {
+  background: #AAA;
+}
+
+.background-B6F3B6 {
+  background: #B6F3B6;
+}
+
+.background-F5ADAD {
+  background: #F5ADAD;
+}
+
+.background-F8F4C2 {
+  background: #F8F4C2;
+}
+
+.background-box-07AC15 {
+  background: #07AC15;
+}
+
+.background-box-8F0F0F {
+  background: #8F0F0F;
+}
