--- a/homeworks/serhii.kulakivskyi_svkul/6-typescript/src/css/index.css
+++ b/homeworks/serhii.kulakivskyi_svkul/6-typescript/src/css/index.css
@@ -120,8 +120,12 @@ body {
 .balloon__item {
   width: 100px;
   height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: radial-gradient(#E66465, #9198E5);
   border-radius: 50%;
+  font-weight: 700;
   transition: width .3s, height .3s;
 }
 
